<resources>
    <string name="app_name">Coronavirus</string>
    <string name="Countries">Countries</string>
    <string name="virus">Corona</string>
    <string name="prevention">Prevention</string>
    <string name="symptoms">Symptoms</string>
    <string name="cases">Cases</string>
    <string name="notfound">Not Found</string>
    <string name="symptoms_first_line">Corona virus (Covid-19) has mild symptoms that include the following:-</string>
    <string name="runny_nose">● Runny nose</string>
    <string name="sore_throat">● Sore throat</string>
    <string name="coughing">● Coughing</string>
    <string name="fever">● fever</string>
    <string name="difficulty_breathing">● Difficulty breathing (severe cases)</string>
    <string name="symptoms_second_line">The most common symptoms of Covid-19 disease are</string>
    <string name="tiredness">● Tiredness</string>
    <string name="dry_cough">● Dry cough</string>
    <string name="symptoms_third_line">Some patients may have aches and pains, nasal congestion, runny nose, sore throat or diarrhea.</string>
    <string name="symptoms_fourth_line">If you develop a fever, cough, and have difficulty breathing</string>
    <string name="symptoms_five_line">promptly seek medical care. Call in advance and tell your health provider of any recent travel or recent contact with travelers.</string>
    <string name="mask_answer">
             <![CDATA[
        <p>There is no need for healthy people to wear masks. Rather, people who are suspected of infection should be contacted and should be worn if you suffer from coughing or sneezing.
<br> <br>
If you are wearing a mask, you must learn the correct way to wear and dispose of it.
<br> <br>
<b>
How to use, use, remove and dispose of the mask
</b>
<br> <br>
1- Remember that the use of the mask should be limited to health workers, caregivers and people with respiratory symptoms such as fever and cough.
<br> <br>
2- Before touching the mask, clean your hands by rubbing them with an alcohol cleanser or by washing them with soap and water.
<br> <br>
3- Hold the mask and check it to make sure it is not torn or perforated.
<br> <br>
4- Select the top end of the mask (the position of the metal strip).
<br> <br>
5- Make sure to point the correct side of the mask out (the colored side).
<br> <br>
6- Place the mask on your face. Press the metallic tape or the hardened tip of the mask to shape your nose.
<br> <br>
7- Pull the bottom of the muzzle to cover your mouth and chin.
<br> <br>
8- After use, remove the mask by removing the elastic band from behind the ears, keeping the muzzle away from your face and clothes to avoid coming into contact with potentially contaminated mask parts.
<br> <br>
9- Dispose of the used mask immediately by throwing it in a closed waste bin.
<br> <br>
10- Clean your hands after touching the mask or throwing it by rubbing it with an alcohol disinfectant, or if washing them with soap and water if they are clearly dirty.
<br> <br>
        </p>
        ]]>
    </string>
    <string name="wash_answer">
     <![CDATA[
    <p>Yes, there is a right way to wash your hands. It is an art form and is a multi-step process.
    <br> <br>

    Here is how to wash your hands, according to the CDC:
    <br> <br>
    <b> <font color = "red"> Step 1 </font> </b>
    <br> <br>
    Damp your hands with clean, running water. Put the soap on your hands.
    <br> <br>

    <b> <font color = "red"> Step 2 </font> </b>
    <br> <br>
    Rub your hands with soap foam. Place the foam on the back of your hands, between your fingers and under your nails.
    <br> <br>

    The foam causes friction, stripping irritating germs and dirt from the skin. Make sure to reach the corners, as the germs lie there.
    <br> <br>
    <b> <font color = "red"> Step 3 </font> </b>
    <br> <br>
    Rub your hands for at least 20 seconds. Sing or hum "happy birthday" twice to count the time.
    <br> <br>

    There is no magic number, but washing your hands for at least 20 seconds removes microbes more than washing hands for shorter periods.
    <br> <br>
    <b> <font color = "red"> Step 4 </font> </b>
    <br> <br>
    Rinse your hands well under clean, running water. You have got germs removed from your hands, because clean water flushes them out.
    <br> <br>
    <b> <font color = "red"> Step 5 </font> </b>
    <br> <br>
    Dry your hands with a clean towel or dry them with air. Wet hands transmit viruses easily. So drying them reduces this risk.
    <br> <br>
    Soap and water are one of the best ways to protect against viruses, but hand sanitizer is a good alternative if you can not wash your hands. Simply put a small amount of cleanser and rub your hands together for about 20 seconds. Hand sanitizers will not get rid of dirt, chemicals, or a few germs, but they are better than nothing.        </p>

    ]]>

    </string>
    <string name="home_answer">
        <![CDATA[
        <p>
       After the spread of the Corona virus worldwide, each of us seeks to prevent the risk of infection and sterilize all parts of the home, in light of the isolation that some countries follow to reduce the spread of Corona. <br> <br>

In light of the fear and panic that afflicts us, we show you the correct ways to sterilize the home to protect against viruses, especially corona.
        <br> <br>
<b> <font color = "red"> Hand-washing </font> </b> <br> <br>

It is recommended to wash hands frequently, especially before eating and after dealing in paper and metal currencies, when shaking hands with others or pressing the elevator piston, or using the hand to climb up the ladder or shopping, and washing hands with any type of soap continues for between 30 and 50 seconds. <br> <br>

Experts stressed that eliminating viruses has nothing to do with the amount of sterilizers used, but rather the method of use is the basis. <br> <br>

They explained that applying sterilizers to all parts of the hands, and massaging the fingers, thumb and wrists well, is the basis in fighting corona and killing the virus. <br> <br> <br>

Despite all the benefits of an alcohol hand sanitizer to protect against viruses, it can be harmful to the skin, because excessive use of alcohol may absorb the surrounding water molecules, causing dry skin. <br> <br> <br>

<b> <font color = "red"> House Cleansing </font> </b> <br> <br>

All fine antiques, statues, and dried roses should be isolated at home or work, as they are difficult to sterilize due to the large number of folds, so it is advisable to completely isolate them and cover them with bags to facilitate the daily sterilization process later. <br> <br> <br>

The first step in disinfecting household surfaces is by using a package of dilute chlorine (20 cm chlorine mixed with a filter of water), and it is placed in a spray to spray the surfaces and wipe the floors. <br> <br> <br>

This packaging is not suitable for use; only within 24 hours, because it will lose its ability to cleanse and a new solution must be made every day, and that cycle must be repeated once every 24 hours on the same surfaces, which must remain wet for a period of not less than five minutes before drying And, preferably, let it air dry if possible. <br> <br>

Care must be taken to disinfect places most vulnerable to pollution, such as door entry, windows and shoes. <br> <br>

Every day, exposure to pollution sources is cleansed, sterilized and cleaned, including toilets and bathrooms, except in the case of a person with colds and coughs. In the absence of a private bathroom for the patient, the bathroom should be disinfected after every use and not once throughout the day. <br> <br>

This solution is valid for disinfecting any surface of fabrics, metals, woods, and clothing, and can also be used as a spray on products purchased on store shelves. <br> <br> <br>

<b> <font color = "red"> ventilation </font> </b> <br> <br>

It is advisable to ventilate the house after using cleaning solutions to disinfect surfaces from the emerging corona virus, and follow the manufacturers instructions and code on household detergent packages, including diluted household solutions, to implement and apply appropriate ventilation, depending on the house and according to the cleaning product. <br> <br> <br>

Use sterilization wipes on frequently-touched electronic items, such as phones and computers. <br> <br>

<b> <font color = "red"> deal with waste </font> </b> <br> <br>

Avoid touching used tissues and other waste when emptying the waste baskets. Wash your hands with soap and water after emptying the waste baskets and touch the used tissues and similar waste. <br> <br> <br>
           </p>
        ]]>
    </string>
    <string name="crowding_answer">
        <![CDATA[
        <p>
The new Corona virus is spread mainly by contact with an infected person when it coughs or sneezes, or by droplets, saliva, or nasal secretions.
Therefore, you should stay away from crowded places
        </p>
        ]]>
    </string>
    <string name="smoking_answer">
        <![CDATA[
In conjunction with the spread of the emerging "Corona" virus, "Covid-19", warnings for smokers to quit immediately spread. Health experts say that smoking reduces the body ability to fight infectious diseases.
 <br> <br>
The chief health officer of Britain, Chris Wighty, told the British Parliament that smokers should be concerned about respiratory infections, such as corona, because they are more likely to catch an infection and their immune system is not functioning as adequately.
  <br> <br>
"The time to quit smoking is now," said Mayor of New York City, Bill de Palacio, speaking about the incidence of new viral coronavirus in his city.
  <br> <br>
Al-Hurra channel mentioned that health experts say that smoking reduces the body ability to fight infectious diseases, including:
Epidemiologist Saskia Popescu, who told Business Insider, that people with a history of smoking are at greater risk of developing acute respiratory problems or pneumonia.
  <br> <br>
Smoking also makes the symptoms of the virus worse, according to Professor Sanjaya Sinanayake, a professor at the Australian National University because it is linked to chronic lung and heart disease. When problems of this type occur, the symptoms of the “Covid-19” caused by the virus are exacerbated, because the latter affects the respiratory system.
  <br> <br>
Studies of people living with HIV in China indicate that the number of male victims of the virus is more than men, and experts believe that the reason for this is smoking, because the proportion of men who smoke in China is much greater than women, and according to a study conducted by the World Health Organization in 2019, 47.6% of Chinese men smoke, compared to only 1.8% of women.
  <br> <br>
A study by the California Tobacco Research Center indicates that "when a person lung is exposed to influenza or other infections, the harmful effects of smoking are more dangerous for smokers than for non-smokers."
  <br> <br>        </p>
        ]]>
    </string>
</resources>